//go:build ignore

package main

import (
	"fmt"
	"os"
	"strconv"
	"strings"
	"sync"
	"sync/atomic"
	"time"

	"utls_client/fingerprint"
	"utls_client/ippool"
	clientLib "utls_client/lib"
)

type RequestResult struct {
	IP         string
	StatusCode int
	Success    bool
	Error      error
	Duration   time.Duration
	Country    string // å›½å®¶
	City       string // åŸå¸‚
}

// Task è¡¨ç¤ºä¸€æ¬¡è¦å®Œæˆçš„è¯·æ±‚ä»»åŠ¡ï¼ˆåŒä¸€ç›®æ ‡èµ„æºï¼Œä¸ç»‘å®šå…·ä½“ IPï¼‰
type Task struct {
	ID          int
	Attempts    int
	LastTriedIP string
}

func main() {
	fmt.Println("=== IP æ± å¹¶å‘æµ‹è¯• ===")
	fmt.Println("å‘æ‰€æœ‰ IP åŒæ—¶å‘é€è¯·æ±‚ï¼ˆæ¯ä¸ª IP åªè¯·æ±‚ä¸€æ¬¡ï¼‰")
	fmt.Println("ç›®æ ‡åœ°å€: https://kh.google.com/rt/earth/BulkMetadata/pb=!1m2!1s!2u1002")
	fmt.Println()

	// 1. åˆå§‹åŒ– IP æ± åº“
	dataDir := "./ippool_data"
	library := ippool.NewIPPoolLibrary("http://tile0.zeromaps.cn:9005", dataDir)
	defer library.Close()

	// ç›´æ¥ä»æœ¬åœ°åŠ è½½æ•°æ®ï¼ˆä¸è¿›è¡Œç½‘ç»œåŒæ­¥ï¼‰
	// å¦‚æœéœ€è¦æ›´æ–°æ•°æ®ï¼Œå¯ä»¥æ‰‹åŠ¨è°ƒç”¨ library.SyncAll() æˆ–å¯åŠ¨å®šæ—¶åŒæ­¥
	fmt.Println("âœ… å·²ä»æœ¬åœ°åŠ è½½ IP æ± æ•°æ®")
	fmt.Println("   æç¤ºï¼šå¦‚æœéœ€è¦åŒæ­¥æœ€æ–°æ•°æ®ï¼Œè¯·è°ƒç”¨ library.SyncAll()")
	fmt.Println()

	// 2. æŸ¥æ‰¾ kh.google.com ä¸»æœºçš„ IP
	hostName := "kh.google.com"
	hosts := library.GetAllHosts()
	var targetHost *ippool.HostInfo
	for _, host := range hosts {
		if host.Host == hostName {
			targetHost = &host
			break
		}
	}

	if targetHost == nil {
		fmt.Printf("âŒ æœªæ‰¾åˆ°ä¸»æœº: %s\n", hostName)
		fmt.Println("å¯ç”¨ä¸»æœºåˆ—è¡¨:")
		for _, h := range hosts {
			fmt.Printf("  - %s\n", h.Host)
		}
		return
	}

	// 3. è·å–æ‰€æœ‰ IP åœ°å€
	analyzer := ippool.NewAnalyzer(library)
	ipv4List, ipv6List, err := analyzer.GetAllIPsByHost(hostName)
	if err != nil {
		fmt.Printf("âŒ è·å– IP åˆ—è¡¨å¤±è´¥: %v\n", err)
		return
	}

	// åˆå¹¶ IPv4 å’Œ IPv6ï¼Œä¼˜å…ˆä½¿ç”¨ IPv4
	allIPs := append(ipv4List, ipv6List...)
	totalIPs := len(allIPs)

	if totalIPs == 0 {
		fmt.Printf("âŒ ä¸»æœº %s æ²¡æœ‰å¯ç”¨çš„ IP\n", hostName)
		return
	}

	fmt.Printf("âœ… æ‰¾åˆ° %d ä¸ª IP (IPv4: %d, IPv6: %d)\n", totalIPs, len(ipv4List), len(ipv6List))
	fmt.Println()

	// 4. ä»»åŠ¡é˜Ÿåˆ— + å·¥ä½œè€…æ¨¡å‹
	// ç”Ÿæˆ 1000 ä¸ªä»»åŠ¡ï¼Œæ¯ä¸ªä»»åŠ¡è¯·æ±‚åŒä¸€ç›®æ ‡åœ°å€
	// ç”± totalIPs ä¸ªå·¥ä½œè€…ï¼ˆæ¯ä¸ªå¯¹åº”ä¸€ä¸ª IPï¼‰å¹¶å‘æ‰§è¡Œ
	taskCount := 1000
	target := "https://kh.google.com/rt/earth/BulkMetadata/pb=!1m2!1s!2u1002"
	results := make([]*RequestResult, taskCount)
	var successCount int64
	var failCount int64

	// ä»æŒ‡çº¹åº“éšæœºè·å–æŒ‡çº¹
	lib := fingerprint.NewFingerprintLibrary()
	profile := lib.GetRandomProfile()

	fmt.Printf("ğŸ“Š å¼€å§‹ä»»åŠ¡é˜Ÿåˆ— + å·¥ä½œè€…æ¨¡å‹...\n")
	fmt.Printf("   ç›®æ ‡åœ°å€: %s\n", target)
	fmt.Printf("   ä»»åŠ¡æ•°é‡: %d\n", taskCount)
	fmt.Printf("   å·¥ä½œè€…æ•°é‡ï¼ˆIPæ•°ï¼‰: %d\n", totalIPs)
	// è¯»å–ç¯å¢ƒå˜é‡ REQ_TIMEOUT_MSï¼Œé»˜è®¤ 2000ms
	reqTimeoutMs := 2000
	if v := os.Getenv("REQ_TIMEOUT_MS"); v != "" {
		if n, err := strconv.Atoi(v); err == nil && n > 0 {
			reqTimeoutMs = n
		}
	}
	reqTimeout := time.Duration(reqTimeoutMs) * time.Millisecond
	fmt.Printf("   è¶…æ—¶ç­–ç•¥: %dms è¶…æ—¶ï¼Œå¤±è´¥ä»»åŠ¡ç”±å…¶ä»–ç©ºé—²IPç»§ç»­æ‰§è¡Œ\n", reqTimeoutMs)
	fmt.Printf("   ä½¿ç”¨æŒ‡çº¹: %s\n", profile.Name)
	if os.Getenv("PREWARM") == "1" {
		fmt.Println("   é¢„çƒ­: å·²å¯ç”¨ï¼ˆæ¯ä¸ª IP åœ¨è®¡æ—¶å‰å…ˆå‘èµ·ä¸€æ¬¡é¢„çƒ­è¯·æ±‚ï¼‰")
	} else {
		fmt.Println("   é¢„çƒ­: æœªå¯ç”¨ï¼ˆè®¾ç½® PREWARM=1 å¯å¯ç”¨ï¼‰")
	}
	fmt.Println()

	startTime := time.Now()

	fmt.Println("å¼€å§‹å‘é€è¯·æ±‚ï¼ˆä»»åŠ¡é˜Ÿåˆ— + å·¥ä½œè€…æ¨¡å‹ï¼Œè¶…æ—¶ä»»åŠ¡ç”±å…¶ä»–IPç»§ç»­ï¼‰...")
	fmt.Println()

	// 5. åˆå§‹åŒ–ä»»åŠ¡é˜Ÿåˆ—ï¼ˆ1000 ä¸ªä»»åŠ¡ï¼‰
	tasks := make(chan *Task, taskCount)
	var wg sync.WaitGroup
	var printMu sync.Mutex // ä¿æŠ¤æ‰“å°

	// åˆå§‹åŒ–ä»»åŠ¡ï¼ˆæ¯ä¸ªä»»åŠ¡ä»£è¡¨ä¸€æ¬¡å¯¹åŒä¸€ç›®æ ‡çš„è¯·æ±‚ï¼‰
	for i := 0; i < taskCount; i++ {
		tasks <- &Task{ID: i}
	}

	// ç»“æœå­˜å‚¨ï¼ˆæŒ‰ä»»åŠ¡IDï¼‰
	results = make([]*RequestResult, taskCount)
	var remaining int32 = int32(taskCount)
	maxAttempts := totalIPs // æ¯ä¸ªä»»åŠ¡æœ€å¤šå°è¯•æ‰€æœ‰ IP çš„æ•°é‡

	// å¯åŠ¨æ¯ä¸ªIPçš„å·¥ä½œè€…
	for _, ip := range allIPs {
		// åœ°ç†ä¿¡æ¯ï¼ˆæ‰“å°ç”¨ï¼‰
		geoCountry := ""
		geoCity := ""
		if ipDetail, err := library.GetIPDetail(hostName, ip); err == nil {
			geoCountry = ipDetail.Location.Country
			geoCity = ipDetail.Location.City
		}

		wg.Add(1)
		go func(workerIP, country, city string) {
			defer wg.Done()
			// æ¯ä¸ªå·¥äººä¸€ä¸ªå®¢æˆ·ç«¯
			clientConfig := &clientLib.Config{Timeout: reqTimeout, ServerName: "kh.google.com"}
			ipClient := clientLib.NewClient(&profile.HelloID, clientConfig)
			defer ipClient.Close()

			// URL ä¸è¯·æ±‚å¤´
			var ipURL string
			if strings.Contains(workerIP, ":") && !strings.HasPrefix(workerIP, "[") {
				ipURL = fmt.Sprintf("https://[%s]/rt/earth/BulkMetadata/pb=!1m2!1s!2u1002", workerIP)
			} else {
				ipURL = fmt.Sprintf("https://%s/rt/earth/BulkMetadata/pb=!1m2!1s!2u1002", workerIP)
			}
			headers := map[string]string{
				"Accept":          "application/json, text/javascript, */*; q=0.01",
				"User-Agent":      profile.UserAgent,
				"Origin":          "https://earth.google.com",
				"Referer":         "https://earth.google.com/",
				"Accept-Encoding": "gzip",
			}
			if os.Getenv("PREWARM") == "1" {
				_, _ = ipClient.Do("GET", ipURL, &clientLib.RequestConfig{Method: "GET", Headers: headers, Host: "kh.google.com"})
			}

			for {
				// æ£€æŸ¥æ˜¯å¦æ‰€æœ‰ä»»åŠ¡å·²å®Œæˆ
				if atomic.LoadInt32(&remaining) == 0 {
					return
				}

				select {
				case task := <-tasks:
					if task == nil {
						return
					}
					// å†æ¬¡æ£€æŸ¥ï¼ˆé¿å…é‡å¤å¤„ç†å·²å®Œæˆçš„ä»»åŠ¡ï¼‰
					if atomic.LoadInt32(&remaining) == 0 {
						tasks <- task
						return
					}

					if task.LastTriedIP == workerIP {
						// é¿å…åŒä¸€IPç«‹å³å†æ¬¡å°è¯•ï¼Œæ”¾å›é˜Ÿåˆ—
						tasks <- task
						time.Sleep(1 * time.Millisecond) // çŸ­æš‚å»¶è¿Ÿé¿å…å¿™ç­‰å¾…
						continue
					}

					start := time.Now()
					resp, err := ipClient.Do("GET", ipURL, &clientLib.RequestConfig{Method: "GET", Headers: headers, Host: "kh.google.com"})
					dur := time.Since(start)

					if err == nil && resp != nil && resp.StatusCode == 200 {
						// æˆåŠŸï¼šæ ‡è®°ä»»åŠ¡å®Œæˆ
						if results[task.ID] == nil {
							results[task.ID] = &RequestResult{IP: workerIP, StatusCode: 200, Success: true, Duration: dur, Country: country, City: city}
							atomic.AddInt64(&successCount, 1)
							atomic.AddInt32(&remaining, -1)
							printMu.Lock()
							geoInfo := country
							if city != "" {
								geoInfo = fmt.Sprintf("%s/%s", country, city)
							}
							if geoInfo == "" {
								geoInfo = "-"
							}
							fmt.Printf("ä»»åŠ¡ %d âœ… IP: %-15s | %-30s | çŠ¶æ€ç : %3d | è€—æ—¶: %v\n", task.ID+1, workerIP, geoInfo, 200, dur)
							printMu.Unlock()
						}
						continue
					}

					// å¤±è´¥/è¶…æ—¶ï¼šäº¤ç”±å…¶ä»–IPç»§ç»­
					task.Attempts++
					task.LastTriedIP = workerIP
					if task.Attempts < maxAttempts {
						// æ‰“å°å¤±è´¥ï¼ˆå«è¶…æ—¶æ ‡è®°ï¼‰
						isTimeout := err != nil && (strings.Contains(strings.ToLower(err.Error()), "timeout") || strings.Contains(strings.ToLower(err.Error()), "deadline"))
						printMu.Lock()
						geoInfo := country
						if city != "" {
							geoInfo = fmt.Sprintf("%s/%s", country, city)
						}
						if geoInfo == "" {
							geoInfo = "-"
						}
						if isTimeout {
							fmt.Printf("ä»»åŠ¡ %d â±ï¸ è¶…æ—¶(>2s) IP: %-15s | %-30s | å·²å°è¯•: %d | è€—æ—¶: %v -> äº¤ç”±å…¶ä»–IPç»§ç»­\n", task.ID+1, workerIP, geoInfo, task.Attempts, dur)
						} else if err != nil {
							fmt.Printf("ä»»åŠ¡ %d âŒ IP: %-15s | %-30s | å·²å°è¯•: %d | è€—æ—¶: %v | é”™è¯¯: %v -> äº¤ç”±å…¶ä»–IPç»§ç»­\n", task.ID+1, workerIP, geoInfo, task.Attempts, dur, err)
						} else if resp != nil {
							fmt.Printf("ä»»åŠ¡ %d âš ï¸  IP: %-15s | %-30s | çŠ¶æ€ç : %3d | å·²å°è¯•: %d | è€—æ—¶: %v -> äº¤ç”±å…¶ä»–IPç»§ç»­\n", task.ID+1, workerIP, geoInfo, resp.StatusCode, task.Attempts, dur)
						}
						printMu.Unlock()
						tasks <- task
					} else {
						// æœ€ç»ˆå¤±è´¥ï¼ˆå·²å°è¯•æ‰€æœ‰IPï¼‰
						if results[task.ID] == nil {
							results[task.ID] = &RequestResult{IP: workerIP, Success: false, Error: err, Duration: dur, Country: country, City: city}
							atomic.AddInt64(&failCount, 1)
							atomic.AddInt32(&remaining, -1)
							printMu.Lock()
							fmt.Printf("ä»»åŠ¡ %d âŒ æœ€ç»ˆå¤±è´¥ï¼ˆå·²å°è¯• %d ä¸ªIPï¼‰\n", task.ID+1, task.Attempts)
							printMu.Unlock()
						}
					}
				case <-time.After(100 * time.Millisecond):
					// å®šæœŸæ£€æŸ¥æ˜¯å¦æ‰€æœ‰ä»»åŠ¡å·²å®Œæˆï¼Œé¿å…æ°¸ä¹…é˜»å¡
					continue
				}
			}
		}(ip, geoCountry, geoCity)
	}

	// ç­‰å¾…æ‰€æœ‰ä»»åŠ¡å®Œæˆ
	for {
		if atomic.LoadInt32(&remaining) == 0 {
			break
		}
		time.Sleep(100 * time.Millisecond)
	}
	// å…³é—­ä»»åŠ¡é€šé“ï¼Œé€šçŸ¥å·¥ä½œè€…é€€å‡º
	close(tasks)
	wg.Wait()

	totalDuration := time.Since(startTime)

	// 6. ç»Ÿè®¡ç»“æœ
	fmt.Println("=== æµ‹è¯•ç»“æœ ===")
	fmt.Printf("æ€»ä»»åŠ¡æ•°: %d\n", taskCount)
	fmt.Printf("å·¥ä½œè€…æ•°ï¼ˆIPæ•°ï¼‰: %d\n", totalIPs)
	fmt.Printf("æˆåŠŸä»»åŠ¡: %d (%.2f%%)\n", successCount, float64(successCount)/float64(taskCount)*100)
	fmt.Printf("å¤±è´¥ä»»åŠ¡: %d (%.2f%%)\n", failCount, float64(failCount)/float64(taskCount)*100)
	fmt.Printf("æ€»è€—æ—¶: %v\n", totalDuration)
	fmt.Printf("å¹³å‡æ¯ä¸ªä»»åŠ¡è€—æ—¶: %v\n", totalDuration/time.Duration(taskCount))
	if successCount > 0 {
		fmt.Printf("æˆåŠŸä»»åŠ¡å¹³å‡è€—æ—¶: %v\n", calculateAvgDuration(results, true))
	}
	fmt.Println()

	// 7. æ˜¾ç¤ºçŠ¶æ€ç åˆ†å¸ƒ
	statusCodeCount := make(map[int]int)
	for _, result := range results {
		if result != nil {
			statusCodeCount[result.StatusCode]++
		}
	}

	if len(statusCodeCount) > 0 {
		fmt.Println("çŠ¶æ€ç åˆ†å¸ƒ:")
		for code, count := range statusCodeCount {
			fmt.Printf("  %d: %d ä¸ªè¯·æ±‚\n", code, count)
		}
		fmt.Println()
	}

	// 8. æŒ‰å›½å®¶å’ŒåŸå¸‚ç»Ÿè®¡å¹³å‡é€Ÿåº¦
	fmt.Println("æŒ‰å›½å®¶/åŸå¸‚ç»Ÿè®¡ï¼ˆæˆåŠŸè¯·æ±‚çš„å¹³å‡è€—æ—¶ï¼‰:")
	countryStats := make(map[string][]time.Duration) // å›½å®¶ -> è€—æ—¶åˆ—è¡¨
	cityStats := make(map[string][]time.Duration)    // åŸå¸‚ -> è€—æ—¶åˆ—è¡¨

	for _, result := range results {
		if result != nil && result.Success {
			if result.Country != "" {
				countryStats[result.Country] = append(countryStats[result.Country], result.Duration)
			}
			if result.City != "" {
				cityKey := fmt.Sprintf("%s/%s", result.Country, result.City)
				cityStats[cityKey] = append(cityStats[cityKey], result.Duration)
			}
		}
	}

	// æŒ‰å¹³å‡è€—æ—¶æ’åºå›½å®¶
	type CountryStat struct {
		Country     string
		AvgDuration time.Duration
		Count       int
	}
	var countryList []CountryStat
	for country, durations := range countryStats {
		var total time.Duration
		for _, d := range durations {
			total += d
		}
		countryList = append(countryList, CountryStat{
			Country:     country,
			AvgDuration: total / time.Duration(len(durations)),
			Count:       len(durations),
		})
	}

	// æ’åºï¼ˆæŒ‰å¹³å‡è€—æ—¶å‡åºï¼Œæœ€å¿«çš„åœ¨å‰ï¼‰
	for i := 0; i < len(countryList)-1; i++ {
		for j := i + 1; j < len(countryList); j++ {
			if countryList[i].AvgDuration > countryList[j].AvgDuration {
				countryList[i], countryList[j] = countryList[j], countryList[i]
			}
		}
	}

	if len(countryList) > 0 {
		fmt.Printf("  å›½å®¶æ’åï¼ˆæŒ‰å¹³å‡é€Ÿåº¦ï¼Œå…± %d ä¸ªå›½å®¶ï¼‰:\n", len(countryList))
		for i, stat := range countryList {
			fmt.Printf("    %2d. %-30s | å¹³å‡è€—æ—¶: %v | æˆåŠŸæ•°: %d\n",
				i+1, stat.Country, stat.AvgDuration, stat.Count)
		}
		fmt.Println()
	}

	// æŒ‰å¹³å‡è€—æ—¶æ’åºåŸå¸‚
	type CityStat struct {
		City        string
		AvgDuration time.Duration
		Count       int
	}
	var cityList []CityStat
	for city, durations := range cityStats {
		var total time.Duration
		for _, d := range durations {
			total += d
		}
		cityList = append(cityList, CityStat{
			City:        city,
			AvgDuration: total / time.Duration(len(durations)),
			Count:       len(durations),
		})
	}

	// æ’åºï¼ˆæŒ‰å¹³å‡è€—æ—¶å‡åºï¼Œæœ€å¿«çš„åœ¨å‰ï¼‰
	for i := 0; i < len(cityList)-1; i++ {
		for j := i + 1; j < len(cityList); j++ {
			if cityList[i].AvgDuration > cityList[j].AvgDuration {
				cityList[i], cityList[j] = cityList[j], cityList[i]
			}
		}
	}

	if len(cityList) > 0 {
		fmt.Printf("  åŸå¸‚æ’åï¼ˆæŒ‰å¹³å‡é€Ÿåº¦ï¼Œå…± %d ä¸ªåŸå¸‚ï¼‰:\n", len(cityList))
		for i, stat := range cityList {
			fmt.Printf("    %2d. %-30s | å¹³å‡è€—æ—¶: %v | æˆåŠŸæ•°: %d\n",
				i+1, stat.City, stat.AvgDuration, stat.Count)
		}
		fmt.Println()
	}

	// 9. æ˜¾ç¤ºæ‰€æœ‰è¯·æ±‚çš„å®Œæ•´åˆ—è¡¨ï¼ˆæŒ‰è€—æ—¶ä»å¿«åˆ°æ…¢æ’åºï¼‰
	fmt.Printf("æ‰€æœ‰è¯·æ±‚è¯¦æƒ…ï¼ˆæŒ‰è€—æ—¶ä»å¿«åˆ°æ…¢æ’åºï¼Œå…± %d ä¸ªè¯·æ±‚ï¼‰:\n", totalIPs)
	sortedResults := sortByDuration(results, true)

	for i, result := range sortedResults {
		if result == nil {
			continue
		}
		status := "âŒ"
		if result.Success {
			status = "âœ…"
		}

		countryCity := ""
		if result.Country != "" {
			countryCity = fmt.Sprintf("%s/%s", result.Country, result.City)
			if result.City == "" {
				countryCity = result.Country
			}
		}

		if countryCity != "" {
			if result.Error != nil {
				fmt.Printf("  %s [%3d/%3d] IP: %-15s | %-30s | è€—æ—¶: %v | é”™è¯¯: %v\n",
					status, i+1, len(sortedResults), result.IP, countryCity, result.Duration, result.Error)
			} else {
				fmt.Printf("  %s [%3d/%3d] IP: %-15s | %-30s | çŠ¶æ€ç : %3d | è€—æ—¶: %v\n",
					status, i+1, len(sortedResults), result.IP, countryCity, result.StatusCode, result.Duration)
			}
		} else {
			if result.Error != nil {
				fmt.Printf("  %s [%3d/%3d] IP: %-15s | è€—æ—¶: %v | é”™è¯¯: %v\n",
					status, i+1, len(sortedResults), result.IP, result.Duration, result.Error)
			} else {
				fmt.Printf("  %s [%3d/%3d] IP: %-15s | çŠ¶æ€ç : %3d | è€—æ—¶: %v\n",
					status, i+1, len(sortedResults), result.IP, result.StatusCode, result.Duration)
			}
		}
	}

	fmt.Println("\nâœ… æµ‹è¯•å®Œæˆ")
}

// calculateAvgDuration è®¡ç®—å¹³å‡è€—æ—¶ï¼ˆä»…ç»Ÿè®¡æˆåŠŸçš„è¯·æ±‚ï¼‰
func calculateAvgDuration(results []*RequestResult, successOnly bool) time.Duration {
	var total time.Duration
	var count int

	for _, result := range results {
		if result != nil && (!successOnly || result.Success) {
			total += result.Duration
			count++
		}
	}

	if count == 0 {
		return 0
	}
	return total / time.Duration(count)
}

// sortByDuration æŒ‰è€—æ—¶æ’åº
func sortByDuration(results []*RequestResult, ascending bool) []*RequestResult {
	sorted := make([]*RequestResult, 0, len(results))
	for _, result := range results {
		if result != nil {
			sorted = append(sorted, result)
		}
	}

	// ç®€å•æ’åº
	for i := 0; i < len(sorted)-1; i++ {
		for j := i + 1; j < len(sorted); j++ {
			if (ascending && sorted[i].Duration > sorted[j].Duration) ||
				(!ascending && sorted[i].Duration < sorted[j].Duration) {
				sorted[i], sorted[j] = sorted[j], sorted[i]
			}
		}
	}

	return sorted
}
